改进：关闭或刷新看板展示页面后，及时清除后台会话中保存的看板信息；
改进：整理数据集管理页面【添加】下拉菜单，添加【文本】、【文件】分类；
改进：数据集编辑页面【可变模型】字面修改为【易变模型】；
改进：主页左侧导航栏【项目】替换新图标；
改进：完善创建用户相关操作响应逻辑，避免泄露敏感信息；
改进：系统后台运行日志脱敏处理，避免泄露敏感信息；
改进：前端UI库PrimeVue版本由3.15.0升级至3.45.0；
改进：前端库Vue版本由3.2.36升级至3.4.5；


-----------------------------------------
--v5.1.0
-----------------------------------------

重构：【数据集属性】重构为【数据集字段】；
重构：【数据集资源目录】重构为【文件源】，访问路径由/dataSetResDirectory重构为/fileSource；
重构：【数据源】访问路径由/schema重构为/dtbsSource；
新增：图表JS对象新增chart.dataSetField*()函数，替换已弃用的chart.dataSetProperty*()函数；
新增：看板全局资源管理新增重命名/移动功能；
新增：数据源新增模式名功能，可指定要连接的数据库模式；
新增：新增用户个人修改密码功能，与个人设置功能分离；
新增：新增disablePersonalSetName配置项，可配置是否禁用个人修改用户名，默认禁用；
新增：新增userPasswordStrength*配置项，可配置用户密码强度和提示信息；
修复：修复数据源管理数据操作可能导致远程代码执行漏洞的BUG；
修复：修复数据源URL构建器页面类型下拉框打开时会出现控制台死循环报错的BUG；
修复：修复当系统运行于https协议时检测新版本功能可能导致所有页面不可用的BUG；
改进：看板展示功能访问路径由/dashboard/show/*改为更简短的/dv/*；
改进：图表展示功能访问路径由/chart/show/*改为更简短的/cv/*；
改进：完善看板全局资源管理功能，支持分页查询、目录导航、子级搜索；
改进：图表插件管理列表插件名称列靠左对齐；
改进：数据集服务端文件选择功能改为更灵活易用的分页查询方式；
改进：数据集参数设置面板在打开时自动聚焦至第一个输入框；
改进：文件类数据集预览时可提示不存在的文件名信息；
改进：数据源数据管理编辑页面聚焦第一个输入框；
改进：数据源驱动编辑页面库文件链接适配系统肤色；
改进：系统所有选择对话框改为从页面右侧弹出；
改进：登录/注册页面验证码填写错误后及时刷新，以增强安全性；


-----------------------------------------
--v5.2.0
-----------------------------------------

重构：各模块管理功能访问路径统一修改为"xxx/manage"；
新增：图表插件/渲染器新增依赖库功能，支持在图表绘制时自动引入JavaScript依赖库；
修复：修复系统在jdk9+环境不支持配置外部JDBC驱动库的BUG；
修复：修复数据源管理页面关闭选项卡操作会导致后续选项卡重绘而丢失信息的BUG；
修复：修复数据源/数据集页面的属性/字段表格编辑操作有时未正确加载内容的BUG；
修复：修复数据源驱动管理功能存在的XML External Entity (XXE)安全漏洞；
改进：看板编辑功能拆分为编辑、设计功能；
改进：图表管理页面移除不必要的【添加（新窗口）】功能按钮；
改进：内置表格图表默认不再强制单行显示单元格内容；
改进：内置表格图表在绑定多个数据集时，合并它们的所有绑定字段作为表格列展示；
改进：内置地图类图表加载不存在的地图后不再执行后续逻辑，避免后续操作报错；
改进：图表/看板展示页的图表插件资源路径改为统一的"/vres"前缀；
改进：数据源管理页面数据源列表改为分页加载；
改进：数据源/数据集/图表/看板的复制操作仅允许有编辑权限的用户执行，增强系统安全性；
改进：对系统所有保存类操作添加数据越权访问校验，增强系统安全性；
改进：登录/注册验证码在使用后立即废弃，增强系统安全性；
改进：图表插件支持设置作者、联系方式、发布日期、平台版本要求信息；
改进：图表插件管理和选择页面新增查看功能，可查看描述、版本、作者等信息；
改进：系统所有内置图表插件升级为采用renderer.js格式规范；
改进：系统左上角设置菜单添加【企业版】链接；
改进：前端库Vue版本由3.4.5降级为3.2.47，解决新版Vue对某些浏览器不兼容的问题；