@@ -992,7 +992,8 @@ DataGear版本更新日志
 -----------------------------------------
 
 重构：各模块管理功能访问路径统一修改为"xxx/manage"；
-新增：图表插件/渲染器新增依赖库功能，支持在图表绘制时自动引入JavaScript依赖库；
+新增：图表插件/渲染器新增依赖库功能，支持在图表绘制前自动引入JavaScript依赖库；
+新增：图表JS对象新增loadLib()函数，用于手动加载JavaScript依赖库；
 修复：修复系统在jdk9+环境不支持配置外部JDBC驱动库的BUG；
 修复：修复数据源管理页面关闭选项卡操作会导致后续选项卡重绘而丢失信息的BUG；
 修复：修复数据源/数据集页面的属性/字段表格编辑操作有时未正确加载内容的BUG；
